[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "distiller"
author = "Arseny Gabdullin"
author-email = "a.gabdullin@tinkoff.ru"
home-page = "https://github.com/tinkoffjournal/distiller"
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
]
requires = [
  "beautifulsoup4 >=4.0.0",
  "pydantic >=1.0.0",
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
  "pytest >=4.0.0",
  "coverage",
  "mypy",
  "black",
  "isort",
  "flake8",
]

[tool.black]
target-version = ["py36"]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100
combine_as_imports = true
combine_star = true
known_third_party = ["bs4", "pydantic"]
